# llm-wiki

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
wiki/: jest.config.js  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
wiki/scripts/: build-backlink-index.js  build-search-index.js  organize-papers.js  test-summary.js
wiki/scripts/__tests__/: organize-papers.test.js
wiki/src-tauri/: Cargo.toml  tauri.conf.json
wiki/src-tauri/capabilities/: default.json
wiki/src-tauri/src/: abstract_lookup.rs  content.rs  gemini.rs  keychain.rs  lib.rs  organizer.rs  pdf_import.rs  pending_sync.rs  summarize.rs  transaction.rs  zotero.rs
wiki/src-tauri/tests/: integration_test.rs
wiki/src/__tests__/: AuthGuard.test.tsx  Header.test.tsx  OrganizeProgress.test.tsx  PaperPreview.test.tsx  SearchBar.test.tsx  ZoteroStatusBar.test.tsx  content.test.ts  latex.test.tsx  onboarding.test.tsx  setup.ts  wikilink.test.tsx
wiki/src/app/: layout.tsx  page.tsx
wiki/src/app/categories/[category]/: CategoryView.tsx  page.tsx
wiki/src/app/onboarding/: page.tsx
wiki/src/app/papers/[slug]/: PaperView.tsx  page.tsx
wiki/src/app/settings/: page.tsx
wiki/src/components/: AuthGuard.tsx  Header.tsx  OrganizeProgress.tsx  PaperPreviewContext.tsx  PaperPreviewDrawer.tsx  SearchBar.tsx  ZoteroStatusBar.tsx
wiki/src/lib/: content.ts  markdown.ts
